--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Expense Tracker</title>
     <meta name="description" content="A simple expense tracker to manage your daily expenses, calculate totals and export data."/>
-    <meta name="keywords" content="expense tracker, expense manager">
+    <meta name="keywords" content="expense tracker, expense manager, budgeting, finance app, daily expenses, expense calculator, export expenses, print expenses"/>
     <meta name="author" content="Bharath Kumar Ampolu">
   </head>
   <body>
